# mitra

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Makefile  POETRY_MIGRATION.md  QUICKSTART.md  README.md  ROADMAP.md  SETUP_COMPLETE.md  SOLANA_INTEGRATION_PLAN.md  TESTING.md  devnet_config.json  docker-compose.yml  verify_setup.sh
backend/: .dockerignore  .env.devnet  .gitignore  Cargo.toml  Dockerfile  POC_SETUP.md  README.md  alembic.ini  build.rs  check_final.txt  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  pyproject.toml
backend/.sqlx/: query-0187c884da21b48651fbc387b620fe9b4f0f4284cd12d8e3d6534ade8aecb54c.json  query-03325aa8f35ead67a2c91c0253d4f35d0e2727aed956bfa72f2a9dac3853f057.json  query-03385b956aab3841430b14b38dbb37aa665216c11a18d57b251e9b032a609359.json  query-08ccedd6980b9c6f6d4fcd8da4a43d0ef8186c2f23d18547d916f78497e7f8f9.json  query-09761f3b53cda28c73ab728730128a73b042a98e72b6723b14c14594bb45c6cb.json  query-172357e80afd5f3318aaafdb4ad13f9f6973533e015f1e7c5cf0b41f19feee56.json  query-21e78ef1753ba0edeedc5b84945b7182af984bc34cd6464ac2e0e680f03ebff2.json  query-2a8790329b2552b21bbac6c1cf203da01071192dee7f97fb7f91a963c7a07d90.json  query-31f2073c74c68d0e180e2fefd441d29e34c15b8d238cee6632263f224e9d5997.json  query-3b11325f947316447939d86b127260dc364511b99f1870555cc549d4179d3de4.json  query-3c58ae243828391e2092fb9624291803518598da8df8087fbb38951caebd96f1.json  query-435df89a15726cdf63ab423eab7e78ee9e236995cf6011cf96a03ca2f69450e6.json  query-4385c0814b9bf5f1d92260a7f17b4258d8c85a73eafa21088f95f3beaff1fb07.json  query-4e5689829f3eb0f2f4b6caabe33d964cbdddcdefd1747871627f6e74264845c1.json  query-56ea035a023e47a209f068e97393911e098f2af1996d86241bed591caf540712.json  query-67f57b76261ee3d581d7fc46900d8f69913c05be215df2c8f237c5feb5d6eeef.json  query-688f106bbd854e20c63a26137af99ec9b30a0fa4139023c9cca9349a5930a504.json  query-69bfc8082c76c21c512b88a96c7b4527d54414c53a19418913a7b96840b37d80.json  query-6f98596f3eb5fc5fb0ebdcadd9ff9a2d7ba44fb44403c2c2183639f1fd1b9225.json  query-78ac4f1193cbe221c5333d0decd9d273c47e3baa1efdf8be04cdb9bbd401c6fb.json  query-7a7029db97b82188d4a5cc84f1b377bca8abcd5899b4d66a11aad857126e15af.json  query-80566af6fe5b9b40fe3d4c32fc6e184b072a3fa1ca64b40d8697ccd156573cbc.json  query-8203eda02cce9c0c0dcf2d4d2d125d285534e1bd5c99deadc43a1979707275c9.json  query-8320bf98f8333dc3bc5ea304522deafbe9c1f99386950e35a6193353747a014d.json  query-876fc298fadf22ad2bfd8629d4e578c3ea50bb635b8ed2e8eb9bdc56c3cb396e.json  query-8f7e2c7ff8d4e03368037053e46183a34a54177de9a61ff8764ad3199196fbc7.json  query-906b1d6f9774202c7487bc175107b0683596cec552d25d67da3149de436eecda.json  query-90e7491571739e7b8dc2041bf8997444e3504b3f66be981edd8c77aabcc5ffad.json  query-96bb292b7d00e3bc1ab31a652b7c7c14690a94b34cbe468e613dc399025c2fd1.json  query-a0828b4e9793adff7a7a2f70e7db88fd51ac8a22e6afd9f593b583e2f0810dc7.json  query-a0ff98d82be8c4d300bba2bde9c03f92a4163a2888a5aaf1986fe630e72d3885.json  query-a6a7cd529aac4429a6a8c539a8b7e5e23a22df4176afe71309c9642d54b9f520.json  query-a6da21f1e4b3dc2a4998f7b71a65f0f71749e0838b8efc7ec1ddb9425b59d75b.json  query-b0e85ee28847df3ad95c933447736bbd207bb7b13f33aeef24a7eca758ff9da5.json  query-b60e38d49abeeedf8e638a4ba344159cc39e780e89bef61ac77e89e52bde1145.json  query-bd95f574dca499c9e1a9b800360042736576d14e1126d275dae1cc937f328ab9.json  query-bed762ac849c4b9ebf23fa36464550c68e8c102817f56fbf3e85e5dd505faec6.json  query-c0bd1e4940864d88b68076d9b39c4f0b80df60314ef704791390513998bfb9ce.json  query-c3d4e032d3c0fc492aae3a9b89e482be6a3276840c79cb192c327947bec85408.json  query-c69dc5e88ffabdac6e51301455ddc80b9f96107d8315e7b7de32af1cda22313f.json  (+11 more)
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/models/: __init__.py  group.py  market.py  transaction.py  user.py
backend/migrations/: .gitkeep  001_init_schema.sql  002_add_indices.sql  003_balance_tracking.sql  004_add_arbiter.sql  005_settlement_votes.sql
backend/scripts/: create_migration.sh  init_db.sh
backend/src/: auth.rs  committer.rs  config.rs  error.rs  grpc_service.rs  lib.rs  main.rs  state_manager.rs  websocket.rs
backend/src/amm/: lmsr.rs  mod.rs
backend/src/database/: mod.rs  pool.rs
backend/src/models/: balance.rs  bet.rs  event.rs  friend_group.rs  group_member.rs  mod.rs  price_snapshot.rs  user.rs
backend/src/repositories/: balance_repository.rs  bet_repository.rs  event_repository.rs  friend_group_repository.rs  group_member_repository.rs  mod.rs  price_snapshot_repository.rs  user_repository.rs
backend/src/services/: audit.rs  betting_service.rs  emergency_withdrawal.rs  event_service.rs  group_service.rs  ml_poller.rs  mod.rs  settlement.rs
backend/src/solana-client/: README.md  anchor_client.rs  mod.rs
backend/src/solana_client/: anchor_client.rs  mod.rs
backend/tests/: README.md  database_test.rs  e2e_test.rs  helpers.rs  integration_test.rs  unit_test.rs
math/: main.py  (+3 more)
ml/: README.md  pyproject.toml
ml-service/: conftest.py  pyproject.toml  pytest.ini
ml-service/tests/: README.md  test_demand_forecast.py  test_integration.py  test_liquidity_optimizer.py  test_price_predictor.py
ml/amm/: __init__.py
ml/analytics/: __init__.py
ml/graph/: __init__.py
ml/recommender/: __init__.py
solana/: Anchor.toml  Cargo.toml  FIXES_APPLIED.md  README.md  package.json  setup-test-user.sh  tsconfig.json
solana/keys/: backend-keypair.json  faucet-authority.json  test-user.json
solana/programs/events/: Cargo.toml
solana/programs/events/src/: errors.rs  lib.rs  state.rs
solana/programs/friend_groups/: Cargo.toml
solana/programs/friend_groups/src/: errors.rs  lib.rs  state.rs
solana/programs/friend_groups/src/instructions/: accept_invite.rs  create_group.rs  deposit_funds.rs  invite_member.rs  mod.rs  remove_member.rs  treasury_transfer.rs  withdraw_funds.rs
solana/programs/treasury/: Cargo.toml
solana/programs/treasury/src/: errors.rs  lib.rs  state.rs
solana/tests/: README.md  events.ts  friend-groups.ts  harness.ts  helpers.ts  integration.spec.ts.skip  treasury.ts
(+45 files in other folders)
