[package]
name = "mitra-backend"
version = "0.1.0"
edition = "2021"
authors = ["Mitra Team"]
description = "Backend service for Mitra prediction market platform"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { 
    version = "0.7", 
    features = [
        "runtime-tokio-native-tls",
        "postgres",
        "chrono",
        "uuid",
        "migrate",
        "decimal"
    ] 
}

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment variables
dotenv = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Decimal for financial calculations
rust_decimal = { version = "1", features = ["serde-with-str", "std"] }

# Solana client (for on-chain interactions)
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.32.1"

# HTTP client (if needed for external APIs)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"

# WebSocket
tokio-tungstenite = "0.21"

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.1"
hex = "0.4"

[build-dependencies]
# gRPC code generation
tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
# Testing
tokio-test = "0.4"
sqlx = { 
    version = "0.7", 
    features = [
        "runtime-tokio-native-tls",
        "postgres",
        "chrono",
        "uuid",
        "migrate",
        "decimal",
        "testing"
    ] 
}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1