[package]
name = "mitra-backend"
version = "0.1.0"
edition = "2021"
authors = ["Mitra Team"]
description = "Backend service for Mitra prediction market platform"

# Expose as both binary and library
[lib]
name = "mitra_backend"
path = "src/lib.rs"

[[bin]]
name = "mitra-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
# Downgrading to 0.6.3 to resolve zeroize conflict with Solana
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "migrate", "decimal", "macros", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC
tonic = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
prost-types = "0.12"
http = "1.0"
http-body = "1.0"
tower-service = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment variables
dotenv = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Decimal for financial calculations
rust_decimal = { version = "1", features = ["serde-with-str", "std"] }

# Solana client (for on-chain interactions)
# Using Solana 1.18 and Anchor 0.30.1 for stability
solana-client = "1.18.17"
solana-sdk = "1.18.17"
anchor-client = "0.30.1"
anchor-lang = "0.30.1"

# Base58 encoding (for keypair handling)
bs58 = "0.5"

# Keccak256 hashing (for PDA derivation matching Solana contracts)
sha3 = "0.10"

# HTTP client (if needed for external APIs)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"

# WebSocket
tokio-tungstenite = "0.21"

# Cryptography
sha2 = "0.10"
hex = "0.4"
# Note: ed25519-dalek is provided by solana-sdk
spl-token = "4.0"
spl-associated-token-account = "2.3"
# spl-memo = "=4.0.0" # Removing manual pin, letting cargo resolve

[build-dependencies]
# gRPC code generation
tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
