[tool.poetry]
name = "mitra-ml-service"
version = "0.1.0"
description = "ML service for Mitra prediction market platform"
authors = ["Mitra Team"]
readme = "README.md"
packages = [{include = "ml_models"}, {include = "services"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
httpx = "^0.25.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"  # For FastAPI test client
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[tool.poetry.group.torch.dependencies]
# Uncomment when ready for PyTorch models
# torch = "^2.1.0"
# torchvision = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

