[tool.poetry]
name = "mitra-ml-service-tests"
version = "0.1.0"
description = "Tests for Mitra ML service (code lives in ../math)"
authors = ["Mitra Team"]
readme = "README.md"
# Note: This is a test-only package. The actual ML service code is in ../math

[tool.poetry.dependencies]
python = "^3.11"
# Test dependencies - code deps inherited from ../math
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"  # For FastAPI test client

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["../math"]
testpaths = ["tests"]

