[tool.poetry]
name = "mitra-ml"
version = "0.1.0"
description = "ML components for Mitra prediction markets"
authors = ["Mitra Team"]
readme = "README.md"
packages = [
    {include = "amm"},
    {include = "recommender"},
    {include = "graph"},
    {include = "analytics"},
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.1.4"
scikit-learn = "^1.4.0"
networkx = "^3.2.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
pytest = "^7.4.4"
black = "^24.1.1"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

