[workspace]
members = [
    "programs/events",
    "programs/friend_groups",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
indexmap = "2.11.0"
proc-macro-crate = "3.3.0"

[profile.release]
overflow-checks = true

